name:                reactive-streams
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/reactive-streams#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ReactiveStreams.BSPSCQueue
  build-depends:       base >= 4.7 && < 5
                     , atomic-primops
                     , primitive
                     , stm
                     , vector
  default-language:    Haskell2010

executable reactive-streams-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reactive-streams
  default-language:    Haskell2010

test-suite reactive-streams-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reactive-streams
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark reactive-streams-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:       base
                     , criterion
                     , primitive
                     , reactive-streams
                     , vector
  other-modules:       Bench.BSPSCQueue
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -qn1" -main-is Bench.main

source-repository head
  type:     git
  location: https://github.com/githubuser/reactive-streams
